--- a/src/plombery/config/config.ini.template
+++ b/src/plombery/config/config.ini.template
@@ -23,6 +23,19 @@ lettings_listing_url = https://www.allsoppandallsopp.com/dubai/properties/reside
 lettings_pages = 100
 lettings_es_index = allsopp_properties
 
+[acres99]
+listing_url = https://www.99acres.com/search/property/buy/kochi?city=131&page={page}
+pages = 20
+min_delay_seconds = 1.5
+max_delay_seconds = 4.0
+detail_retry_count = 3
+request_timeout_seconds = 25
+stop_on_existing = true
+es_index = acres99_properties
+# rent_listing_url = https://www.99acres.com/search/property/rent/kochi?city=131&page={page}
+# rent_pages = 20
+# rent_es_index = acres99_properties
+
 [elasticsearch]
 carswitch_index = carswitch_cars
 properties_index = allsopp_properties
